force-app/main/default/objects/Order_Change__c/fields/Billing_Address_New__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_New__c</fullName>
    <label>Billing Address - New</label>
    <type>Address</type>
</CustomField>