force-app/main/default/objects/Order_Change__c/fields/Billing_Address_Old__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Old__c</fullName>
    <label>Billing Address - Old</label>
    <type>Address</type>
</CustomField>