force-app/main/default/objects/Order_Change__c/fields/Old_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Changes</relationshipLabel>
    <relationshipName>Order_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>