force-app/main/default/objects/Order_Change__c/fields/Old_Invoicing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Invoicing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Invoicing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Changes</relationshipLabel>
    <relationshipName>Order_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>