force-app/main/default/objects/Order_Change__c/fields/Order_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Change_Status__c</fullName>
    <label>Order Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by Order Management</fullName>
            </value>
            <value>
                <fullName>Validated by Contract Ops</fullName>
            </value>
            <value>
                <fullName>Billing Approval</fullName>
            </value>
            <value>
                <fullName>Change Applied to Order</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>