force-app/main/default/objects/Order_Change__c/fields/Shipping_Address_Old__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Old__c</fullName>
    <label>Shipping Address - Old</label>
    <type>Address</type>
</CustomField>